--- a/10_Eventos/index.html
+++ b/10_Eventos/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,24 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="Js/script.js" defer></script>
 </head>
-<body>
-    <h1>Eventos</h1>
-    <button id="my-buttom">Click</button>
+<h1 id="my-title">Eventos</h1>
+<button id="my-buttom">Click</button>
 
-    <h2>Removendo eventos</h2>
-    <button id="btn">Tem evento</button>
-    <button id="other-btn">Removendo o evento</button>
+<h2>Removendo eventos</h2>
+<button id="btn">Tem evento</button>
+<button id="other-btn">Removendo o evento</button>
+
+<div id="btn-container">
+    <button id="div-btn">Propagação</button>
+</div>
+
+<a href="https://www.google.com/">Ir para o Google</a>
 </body>
+
+<h4 id="mouse">Outros eventos de mouse</h4>
+
+<input type="text" id="my-input" placeholder="Testando...">
+
+<body>
+
 </html>
