atualização da aulaJS

--- a/12_Axios/index.html
+++ b/12_Axios/index.html
@@ -13,7 +13,19 @@
 
 <body>
     <h1>Axios</h1>
-
+    <!-- 5 - Post -->
+    <h2>Insira um novo Post:</h2>
+    <form id="post-form">
+        <div>
+            <input type="text" id="title" placeholder="Digite um titulo" />
+        </div>
+        <div>
+            <textarea id="body"></textarea>
+        </div>
+        <div>
+            <input type="submit" value="Criar post" />
+        </div>
+    </form>
     <!-- 3 - Inserindo dados   -->
     <div id="user-container"></div>
 </body>
