--- a/12_Axios/index.html
+++ b/12_Axios/index.html
@@ -7,6 +7,15 @@
     <title>Axios</title>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- 6 - Global Instance -->
+    <!-- <script src="./JS/global.js"></script> -->
+
+    <!-- 7 - Custom Instace -->
+    <script src="JS/custom.js"></script>
+
+    <!-- 8 - Interceptors -->
+    <script src="JS/interceptors.js"></script>
+
     <script src="./JS/script.JS" defer></script>
 
 </head>
